添加充电仓回复出厂功能

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,63 @@ sdk/obj/Release/cpu/br28/pwm_led.o
 sdk/obj/Release/cpu/br28/tone_player.o
 sdk/obj/Release/cpu/br28/tws_audio.o
 sdk/obj/Release/cpu/br28/audio_hearing/audio_hearing_aid.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_led_setting.o
+sdk/obj/Release/apps/common/audio/sine_make.o
+sdk/obj/Release/apps/common/dev_manager/dev_reg.o
+sdk/obj/Release/apps/common/dev_manager/dev_update.o
+sdk/obj/Release/apps/common/device/usb/usb_host_config.o
+sdk/obj/Release/apps/common/device/usb/host/usb_bulk_transfer.o
+sdk/obj/Release/apps/common/device/usb/host/usb_ctrl_transfer.o
+sdk/obj/Release/apps/common/device/usb/host/usb_host.o
+sdk/obj/Release/apps/common/device/usb/host/usb_storage.o
+sdk/obj/Release/apps/common/third_party_profile/common/3th_profile_api.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_anc_voice_key.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_bt_name_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_eq_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_hearing_aid_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_high_low_vol_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_key_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_led_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_mic_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_music_info_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_time_stamp_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_app_setting/adv_work_setting.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_rcsp_protocol/rcsp_adv_bluetooth.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_rcsp_protocol/rcsp_adv_opt.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/adv_rcsp_protocol/rcsp_adv_tws_sync.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/JL_rcsp/bt_trans_data/le_rcsp_adv_module.o
+sdk/obj/Release/apps/common/third_party_profile/jieli/online_db/online_db_deal.o
+sdk/obj/Release/apps/common/update/update.o
+sdk/obj/Release/apps/earphone/app_main.o
+sdk/obj/Release/apps/earphone/app_testbox.o
+sdk/obj/Release/apps/earphone/bt_tws.o
+sdk/obj/Release/apps/earphone/earphone.o
+sdk/obj/Release/apps/earphone/idle.o
+sdk/obj/Release/apps/earphone/key_event_deal.o
+sdk/obj/Release/apps/earphone/pbg_demo.o
+sdk/obj/Release/apps/earphone/tone_table.o
+sdk/obj/Release/apps/earphone/ui_manage.o
+sdk/obj/Release/apps/earphone/user_cfg.o
+sdk/obj/Release/apps/earphone/board/br28/board_jl701n_demo.o
+sdk/obj/Release/apps/earphone/log_config/lib_btctrler_config.o
+sdk/obj/Release/apps/earphone/log_config/lib_driver_config.o
+sdk/obj/Release/apps/earphone/log_config/lib_media_config.o
+sdk/obj/Release/apps/earphone/log_config/lib_system_config.o
+sdk/obj/Release/apps/earphone/log_config/lib_update_config.o
+sdk/obj/Release/apps/earphone/power_manage/app_charge.o
+sdk/obj/Release/apps/earphone/power_manage/app_chargestore.o
+sdk/obj/Release/apps/earphone/power_manage/app_power_manage.o
+sdk/obj/Release/apps/earphone/power_manage/app_umidigi_chargestore.o
+sdk/obj/Release/apps/earphone/rcsp/rcsp_adv.o
+sdk/obj/Release/cpu/br28/app_audio.o
+sdk/obj/Release/cpu/br28/audio_dec.o
+sdk/obj/Release/cpu/br28/audio_link.o
+sdk/obj/Release/cpu/br28/charge.o
+sdk/obj/Release/cpu/br28/chargestore.o
+sdk/obj/Release/cpu/br28/eq_config.o
+sdk/obj/Release/cpu/br28/ldoin_commu.o
+sdk/obj/Release/cpu/br28/pwm_led.o
+sdk/obj/Release/cpu/br28/tone_player.o
+sdk/obj/Release/cpu/br28/tws_audio.o
+sdk/obj/Release/cpu/br28/umidigi_chargestore.o
+sdk/obj/Release/cpu/br28/audio_hearing/audio_hearing_aid.o
